bug fix edit user on smaller resolutions

--- a/src/app/component/dashboard/users/user-details/user-details.component.scss
+++ b/src/app/component/dashboard/users/user-details/user-details.component.scss
@@ -12,6 +12,10 @@ span.h {
   margin-right: 5px;
 }
 
+.store_location {
+  position: static;
+}
+
 .workTime {
   padding-top: 4%;
 }
